[package]
name = "plumo"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

[dependencies]

ethers-core = { path = "../ethers-rs/ethers-core", features = ["celo"] }
ethers-providers = { path = "../ethers-rs/ethers-providers", features = ["celo", "ws"] }

bls-crypto = { git = "https://github.com/celo-org/celo-bls-snark-rs" }
epoch-snark = { git = "https://github.com/celo-org/celo-bls-snark-rs" }
algebra-core = { git = "https://github.com/scipr-lab/zexe", features = ["parallel"] }
groth16 = { git = "https://github.com/scipr-lab/zexe", features = ["parallel"] }

gumdrop = "0.8.0"
tracing-subscriber = "0.2.6"
anyhow = "1.0.31"
smol = "0.1.18"
futures-util = "0.3.5"
tokio = { version = "0.2.21", features = ["macros"] }
serde = "1.0.114"
serde-rlp = "0.1.4"
hex = "0.4.2"
rand = "0.7.3"

