[package]
name = "plumo"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"

[dependencies]

ethers-core = { git = "https://github.com/gakonst/ethers-rs", features = ["celo"] }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs", features = ["celo"] }

bls-crypto = { git = "https://github.com/celo-org/celo-bls-snark-rs" }
epoch-snark = { git = "https://github.com/celo-org/celo-bls-snark-rs" }

ark-serialize = { git = "https://github.com/arkworks-rs/algebra", features = [ "derive" ] }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", features = [ "std", "parallel", "r1cs" ] }

gumdrop = "0.8.0"
tracing-subscriber = "0.2.6"
anyhow = "1.0.31"
smol = "0.1.18"
futures-util = "0.3.5"
tokio = { version = "0.2.21", features = ["macros"] }
serde = "1.0.114"
serde-rlp = "0.1.4"

# The old version of ark-groth16 (d8acb2b) will look for bench-utils at its old home.
[patch.'https://github.com/arkworks-rs/utils']
bench-utils = { git = "https://github.com/gtank/zexe", branch = "fix-v0.1.0-for-rust-1.57" }

[patch.'https://github.com/celo-org/celo-bls-snark-rs']
bls-crypto = { git = "https://github.com/gtank/celo-bls-snark-rs", branch = "gtank/dont-accidentally-depend-on-arkworks-0.3.0" }
epoch-snark = { git = "https://github.com/gtank/celo-bls-snark-rs", branch = "gtank/dont-accidentally-depend-on-arkworks-0.3.0" }